@@ -12,6 +12,7 @@ ChangeLog about GNU GLOBAL
 	* config variable HAVE_SNPRINTF added.
 	* htags.pl: the value of id changed from src directory
 	  to HTML directory.
+	* libutil/conf.c: error check added.
 
 September 26 2000, Shigio Yamaguchi  <shigio@tamacom.com>
 
